DIC-43 Fix spacing for category card carousel

--- a/src/modules/carousel/carousel.css
+++ b/src/modules/carousel/carousel.css
@@ -117,6 +117,14 @@
       padding: 0 0 113px;
     }
   }
+
+  &--article {
+    padding-bottom: 68px;
+
+    @media (--md) {
+      padding-bottom: 107px;
+    }
+  }
 }
 
 .carousel-container {
